Fix scrollbar / navbar css

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   background-color: var(--grey);
   color: var(--white);
   height: 4rem;
-  width: 80%;
+  width: 90%;
   border-radius: 0.375rem;
   margin: 0 auto 3rem;
   padding: 1rem 1.5rem;
