--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,19 @@ html {
   overflow: scroll;
 }
 
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* make scrollbar transparent */
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--dark);
+}
+body::-webkit-scrollbar-corner {
+  background: var(--dark);
+}
+body::-webkit-scrollbar-thumb {
+  background: var(--grey);
+  border-radius: 0.375rem;
 }
 
 body {
